@@ -22,29 +22,16 @@
  */
 
 /*
- * @test id=ZSinglegen
+ * @test
  * @bug 8232069
  * @requires vm.cds
  * @requires vm.bits == 64
- * @requires vm.gc.ZSinglegen
+ * @requires vm.gc.Z
  * @requires vm.gc.Serial
  * @requires vm.gc == null
  * @library /test/lib /test/hotspot/jtreg/runtime/cds/appcds
  * @compile test-classes/Hello.java
- * @run driver TestZGCWithCDS -XX:-ZGenerational
- */
-
-/*
- * @test id=ZGenerational
- * @bug 8232069
- * @requires vm.cds
- * @requires vm.bits == 64
- * @requires vm.gc.ZGenerational
- * @requires vm.gc.Serial
- * @requires vm.gc == null
- * @library /test/lib /test/hotspot/jtreg/runtime/cds/appcds
- * @compile test-classes/Hello.java
- * @run driver TestZGCWithCDS -XX:+ZGenerational
+ * @run driver TestZGCWithCDS
  */
 
 import jdk.test.lib.Platform;
@@ -55,14 +42,12 @@ public class TestZGCWithCDS {
     public final static String UNABLE_TO_USE_ARCHIVE = "Unable to use shared archive.";
     public final static String ERR_MSG = "The saved state of UseCompressedOops and UseCompressedClassPointers is different from runtime, CDS will be disabled.";
     public static void main(String... args) throws Exception {
-         String zGenerational = args[0];
          String helloJar = JarBuilder.build("hello", "Hello");
          System.out.println("0. Dump with ZGC");
          OutputAnalyzer out = TestCommon
                                   .dump(helloJar,
                                         new String[] {"Hello"},
                                         "-XX:+UseZGC",
-                                        zGenerational,
                                         "-Xlog:cds");
          out.shouldContain("Dumping shared data to file:");
          out.shouldHaveExitValue(0);
@@ -71,7 +56,6 @@ public class TestZGCWithCDS {
          out = TestCommon
                    .exec(helloJar,
                          "-XX:+UseZGC",
-                         zGenerational,
                          "-Xlog:cds",
                          "Hello");
          out.shouldContain(HELLO);
@@ -151,7 +135,6 @@ public class TestZGCWithCDS {
          out = TestCommon
                    .exec(helloJar,
                          "-XX:+UseZGC",
-                         zGenerational,
                          "-Xlog:cds",
                          "Hello");
          out.shouldContain(HELLO);
